# dom_judge

./: README.md  docker-compose-domserver.yml  docker-compose-judgehost.yml  docker-compose-traqbot.yml  domserver.env.sample  judgehost.env.sample
contests/test/P/: problem.yaml
contests/test/Q/: problem.yaml
contests/test/Q/data/secret/: Q1.ans  Q2.ans  Q3.in
contests/test/R/data/secret/: R2.ans  R3.in  R4.ans
contests/test/S/: problem.yaml
contests/test/S/data/secret/: S1.ans  S1.in  S2.ans  S3.in  S4.in
row_contests/test/Q/: Q1  Q2  Q3.ans  Q4  Q4.ans
row_contests/test/R/: R1  R1.ans  R2  R3.ans  R4
row_contests/test/S/: S2  S3.ans  S4.ans
script/: make_contests.py
traq-bot/: .env.sample  Cargo.toml  DockerFile
traq-bot/src/: main.rs  util.rs
