[package]
name = "traq-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
http = "1.1.0"
reqwest = "0.12.18"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
traq = "0.1.5"
traq-bot-http = "0.11.3"
rand = "0.9.1"
anyhow = "1.0.98"